Adjusted font-awesome responsive sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,10 @@ a:hover{
   -o-transition: all 0.17s ease-in-out;
 }
 
+input::placeholder{
+  color: white;
+}
+
 .bg-image,
 .bg-slideshow {
   position: absolute;
@@ -66,9 +70,43 @@ a:hover{
   background-attachment: fixed;
 }
 
+/* Jumbotron
+.jumbotron-billboard .img {
+  margin-bottom: 0px;
+  opacity: 0.9;
+  color: #fff;
+  background: #000 url("/src/img/Logo.webp") top center no-repeat;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  overflow: hidden;
+  position:absolute;
+  top:0;
+  left:0;
+  z-index:1;
+  filter: blur(2px);
+}
+.jumbotron h2 {margin-top:0;}
+.jumbotron {
+position:relative;
+padding-top:50px;
+padding-bottom:50px;
+}
+.jumbotron .container {
+position:relative;
+z-index:2;
+}
+
+@media screen and (max-width: 768px) {
+.jumbotron {
+  padding-top:20px;
+  padding-bottom:20px;
+}
+} */
+
 .social-title{
   font-family: var(--bs-title-font-family);
-  font-size: 1.7rem;
+  font-size: 1.7em;
 }
 
 .social-list {
@@ -82,11 +120,11 @@ a:hover{
 
 .social-list .bi,
 .social-list .fa{
-  font-size: 32px;
   color: #606060;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
+  font-size: 2em;
+  width: 1.2em;
+  height: 1.2em;
+  line-height: 2rem;
   transition: all 0.17s ease-in-out;
   -moz-transition: all 0.17s ease-in-out;
   -webkit-transition: all 0.17s ease-in-out;
