Added page loader styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,45 @@ input::placeholder{
   background-attachment: fixed;
 }
 
+/* Page Loader Bar*/
+.loader{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100vw;
+  height:100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f7f9fb;
+  transition: opacity 0.75s, visibility 0.75s;
+}
+
+.loader-hidden{
+  opacity:0;
+  visibility: hidden;
+
+}
+
+.loader::after{
+  content: "";
+  width:75px;
+  height:75px;
+  border:15px solid #dddddd;
+  border-top-color:#7449f5;
+  border-radius: 50%;
+  animation:loading 0.75s ease infinite;
+}
+
+@keyframes loading {
+  from{
+    transform:rotate(0turn);
+  }
+  to{
+    transform:rotate(1turn);
+  } 
+}
+
 /* Navigation Bar*/
 .navbar{
   font-family: var(--bs-title-font-family);
@@ -113,7 +152,7 @@ height:10vh;
   font-family: var(--bs-title-font-family);
 }
 
-/* OffCanvas*/
+/* Social Media Icons*/
 
 .social-title{
   font-family: var(--bs-title-font-family);
@@ -195,7 +234,4 @@ height:10vh;
 .footer-priv{
   text-transform: uppercase;
   font-family: var(--bs-title-font-family);
-}
-
-#subscribe-button{
 }
