--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Alkatra:wght@400;500;600&family=Playfair+Display:ital@0;1&display=swap");
 @import url("/node_modules/bootstrap-icons/font/bootstrap-icons.css");
 
-:root{
-  --bs-body-font-family:font-family: 'Playfair Display', serif;
-  --bs-title-font-family: 'Alkatra', cursive;
-  --text-color-red:red;
-  --text-color-blue:#1da1f2;
+:root {
+  --font-family: "Playfair Display", serif;
+  --bs-title-font-family: "Alkatra", cursive;
+  --text-color-red: red;
+  --text-color-blue: #1da1f2;
   --theme-color: gold;
 }
 ::-webkit-scrollbar {
@@ -35,174 +35,177 @@ ul {
   padding: 0;
 }
 
-a{
-  color:white;
+a {
+  color: white;
   border-bottom: none;
   text-decoration: none;
 }
 
-a:hover{
+a:hover {
   transition: all 0.17s ease-in-out;
   -moz-transition: all 0.17s ease-in-out;
   -webkit-transition: all 0.17s ease-in-out;
   -o-transition: all 0.17s ease-in-out;
 }
 
-input::placeholder{
+input::placeholder {
   color: white;
 }
 
-label{
+label {
   color: white;
 }
 
 /* Background Image*/
 
 /* Page Loader Bar*/
-.loader{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100vw;
-  height:100vh;
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f7f9fb;
   transition: opacity 0.75s, visibility 0.75s;
 }
-.loader img{
+.loader img {
   position: absolute;
-  margin:auto;
+  margin: auto;
   padding: 50%;
-
 }
-.loader-hidden{
-  opacity:0;
+.loader-hidden {
+  opacity: 0;
   visibility: hidden;
 }
-.loader::before{
+.loader::before {
   content: "";
-  width:130px;
-  height:130px;
-  border:5px solid #dddddd;
-  border-top-color:gold;
+  width: 130px;
+  height: 130px;
+  border: 5px solid #dddddd;
+  border-top-color: gold;
   border-radius: 50%;
-  animation:loading 2s linear infinite;
+  animation: loading 2s linear infinite;
 }
 
 @keyframes loading {
-  0%{
+  0% {
     transform: rotate(0deg);
-    border-top-color:gold;
+    border-top-color: gold;
   }
 
-  25%{
+  25% {
     transform: rotate(90deg);
-    border-top-color:gold;
+    border-top-color: gold;
   }
 
-  50%{
+  50% {
     transform: rotate(180deg);
-    border-top-color:red;
+    border-top-color: red;
   }
 
-  75%{
+  75% {
     transform: rotate(270deg);
-    border-top-color:green;
+    border-top-color: green;
   }
 
-  100%{
+  100% {
     transform: rotate(360deg);
-    border-top-color:gold;
+    border-top-color: gold;
   }
 }
 
 /* Navigation Bar*/
-.navbar{
+.navbar {
   font-family: var(--bs-title-font-family);
 }
 
-.navbar-brand{
+.navbar-brand {
   font-family: var(--bs-title-font-family);
 }
 
-.text-color-red{
-  color:var(--text-color-red);
+.text-color-red {
+  color: var(--text-color-red);
 }
 
-.text-color-blue{
-  color:var(--text-color-blue);
+.text-color-blue {
+  color: var(--text-color-blue);
 }
 /* Navigation Bar*/
-.background-bg{
-  background:url('/src/img/Logo-06.webp') no-repeat center center fixed;
-  -moz-background-size:cover;
-  background-size:cover;
-  -o-background-size:cover;
-  height:100vh;
+.background-bg {
+  background: url("/src/img/Logo-06.webp") no-repeat center center fixed;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  height: 100vh;
 }
 
 /* Background Image Responsive */
-@media screen and (max-width: 280px) { /* iPhone 7 screen size */
+@media screen and (max-width: 280px) {
+  /* iPhone 7 screen size */
   .background-bg#main-bg {
-    background:url('/src/img/Logo-XR.webp') no-repeat center center fixed;
-  -moz-background-size:contain;
-  background-size:contain;
-  -o-background-size:contain;
-  height: 100vh;
+    background: url("/src/img/Logo-XR.webp") no-repeat center center fixed;
+    -moz-background-size: contain;
+    background-size: contain;
+    -o-background-size: contain;
+    height: 100vh;
   }
 }
 
 /* Background Image Responsive */
-@media screen and (max-width: 375px) { /* iPhone 7 screen size */
+@media screen and (max-width: 375px) {
+  /* iPhone 7 screen size */
   .background-bg#main-bg {
-    background:url('/src/img/Logo-SE.webp') no-repeat center center fixed;
-  -moz-background-size:contain;
-  background-size:contain;
-  -o-background-size:contain;
-  height: 100vh;
+    background: url("/src/img/Logo-SE.webp") no-repeat center center fixed;
+    -moz-background-size: contain;
+    background-size: contain;
+    -o-background-size: contain;
+    height: 100vh;
   }
 }
 
-@media screen and (max-width: 540px) { /* iPhone XR screen size */
+@media screen and (max-width: 540px) {
+  /* iPhone XR screen size */
   .background-bg#main-bg {
-    background:url('/src/img/Logo-03.webp') no-repeat center center fixed;
-  -moz-background-size:cover;
-  background-size:cover;
-  -o-background-size:cover;
-  height: 100vh;
+    background: url("/src/img/Logo-03.webp") no-repeat center center fixed;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    height: 100vh;
   }
 }
 
-@media screen and (max-width: 720px) { /* iPhone XR screen size */
+@media screen and (max-width: 720px) {
+  /* iPhone XR screen size */
   .background-bg#main-bg {
-    background:url('/src/img/Logo-03.webp') no-repeat center center fixed;
-  -moz-background-size:cover;
-  background-size:cover;
-  -o-background-size:cover;
-  height: 100vh;
+    background: url("/src/img/Logo-03.webp") no-repeat center center fixed;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    height: 100vh;
   }
 }
 
-.background-bg#nav-bg{
-height:10vh;
+.background-bg#nav-bg {
+  height: 10vh;
 }
 
-.background-bg#main-bg{
-  height:100vh;
+.background-bg#main-bg {
+  height: 100vh;
 }
 
 /* OffCanvas*/
 
 .offcanvas,
-.offcanvas-header{
+.offcanvas-header {
   font-family: var(--bs-title-font-family);
 }
 
 /* Social Media Icons*/
 
-.social-title{
+.social-title {
   font-family: var(--bs-title-font-family);
   font-size: 1.7em;
 }
@@ -216,12 +219,12 @@ height:10vh;
   display: inline-block;
 }
 
-.social-list.vertical li{
-  display:block;
+.social-list.vertical li {
+  display: block;
 }
 
 .social-list .bi,
-.social-list .fa{
+.social-list .fa {
   color: #606060;
   font-size: 2em;
   width: 1.5em;
@@ -268,42 +271,42 @@ height:10vh;
   text-decoration: none;
 }
 .social-list-telegram:hover,
-.social-list-telegram .fa:hover{
-  color: #229ED9;
+.social-list-telegram .fa:hover {
+  color: #229ed9;
   text-decoration: none;
 }
 
 .social-list-tiktok a:hover,
-.bi:hover{
-  color: #EE1D52;
+.bi:hover {
+  color: #ee1d52;
   text-decoration: none;
 }
 
-.footer-priv{
+.footer-priv {
   text-transform: uppercase;
   font-family: var(--bs-title-font-family);
 }
 
 /* Email Input*/
 
-#email{
+#email {
   color: white;
 }
 
-.success-message{
+.success-message {
   display: none;
 }
 
-.error-message{
+.error-message {
   display: none;
 }
 
-.success-message .fa{
+.success-message .fa {
   margin-right: 7px;
   font-size: 1.5em;
 }
 
-.col-message{
+.col-message {
   display: none;
   margin-top: 20px;
 }
@@ -311,25 +314,25 @@ height:10vh;
 /* Form Control*/
 
 .form-control,
-textarea.form-control{
+textarea.form-control {
   font-size: 1em;
   height: 3.1em;
   border-radius: 0.75em;
   padding-left: 22px;
   background-color: #323232;
-  border:1px solid #323232;
-  -webkit-box-shadow:none;
-          box-shadow:none;
-      -webkit-appearance: none;
-  -webkit-transition: all .15s;
-       -o-transition: all .15s;
-          transition: all .15s;
+  border: 1px solid #323232;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  -webkit-appearance: none;
+  -webkit-transition: all 0.15s;
+  -o-transition: all 0.15s;
+  transition: all 0.15s;
 }
-.form-control:focus{
-  border-color:#ff904c;
+.form-control:focus {
+  border-color: #ff904c;
   outline: 0;
-  -webkit-box-shadow:none;
-          box-shadow:none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
 .form-control::-moz-placeholder {
@@ -344,11 +347,123 @@ textarea.form-control{
   color: #919191;
 }
 
-.form-control.error{
-  border-color:red;
+.form-control.error {
+  border-color: red;
 }
 
-.form-group{
+.form-group {
   margin-bottom: 10px;
 }
 
+.footer {
+  font-family: var(--font-family);
+}
+
+/* Submit Buttons*/
+.btn-loading {
+  display: none;
+}
+.btn-loading:after {
+  width: 53px;
+  left: 50%;
+  margin-left: -26px;
+  -moz-animation: btnLoading 1.2s both 0.5s infinite;
+  -webkit-animation: btnLoading 1.2s both 0.5s infinite;
+  animation: btnLoading 1.2s both 0.5s infinite;
+  line-height: 28px;
+  font-size: 20px;
+}
+
+@-moz-keyframes btnLoading {
+  0% {
+    -moz-transform: scale(1, 1);
+    transform: scale(1, 1);
+  }
+  12% {
+    -moz-transform: scale(0.7, 0.7);
+    transform: scale(0.7, 0.7);
+  }
+  38% {
+    -moz-transform: scale(1.1, 1.1);
+    transform: scale(1.1, 1.1);
+  }
+  62% {
+    -moz-transform: scale(0.8, 0.8);
+    transform: scale(0.8, 0.8);
+  }
+  87% {
+    -moz-transform: scale(1, 1);
+    transform: scale(1, 1);
+  }
+}
+@-webkit-keyframes btnLoading {
+  0% {
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1);
+  }
+  12% {
+    -webkit-transform: scale(0.7, 0.7);
+    transform: scale(0.7, 0.7);
+  }
+  38% {
+    -webkit-transform: scale(1.1, 1.1);
+    transform: scale(1.1, 1.1);
+  }
+  62% {
+    -webkit-transform: scale(0.8, 0.8);
+    transform: scale(0.8, 0.8);
+  }
+  87% {
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1);
+  }
+}
+@keyframes btnLoading {
+  0% {
+    -moz-transform: scale(1, 1);
+    -ms-transform: scale(1, 1);
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1);
+  }
+  12% {
+    -moz-transform: scale(0.7, 0.7);
+    -ms-transform: scale(0.7, 0.7);
+    -webkit-transform: scale(0.7, 0.7);
+    transform: scale(0.7, 0.7);
+  }
+  38% {
+    -moz-transform: scale(1.1, 1.1);
+    -ms-transform: scale(1.1, 1.1);
+    -webkit-transform: scale(1.1, 1.1);
+    transform: scale(1.1, 1.1);
+  }
+  62% {
+    -moz-transform: scale(0.8, 0.8);
+    -ms-transform: scale(0.8, 0.8);
+    -webkit-transform: scale(0.8, 0.8);
+    transform: scale(0.8, 0.8);
+  }
+  87% {
+    -moz-transform: scale(1, 1);
+    -ms-transform: scale(1, 1);
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1);
+  }
+}
+
+#sub_button {
+  opacity: 0.2;
+}
+
+#sub_button:hover {
+  background: orange;
+  color: #222;
+}
+
+.submit_enabled {
+  opacity: 1 !important;
+  transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+}
